# swell-server

./: .env  .gitignore  Cargo.toml  swell.sql
cert/: localhost.crt  localhost.key
src/: database.rs  db.rs  ethereum_token.rs  ffmpeg_utils.rs  filters.rs  graphql_api.rs  handlers.rs  json_extractor.rs  lib.rs  models.rs
