[package]
name = "swell-server"
version = "0.1.0"
authors = ["Absolute Virtue <AbsoluteVirtueXI@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "^0.2", features = ["full"]}
warp = {version = "^0.2", features = ["tls"]}
futures = "^0.3"
serde = {version = "^1.0.110", features = ["derive"]}
sqlx = { version = "^0.3", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "uuid", "chrono", "time", "json"]}
dotenv = "^0.15.0"
anyhow = "1.0.31"
serde_json = "1.0.53"
uuid = { version = "^0.8", features = ["serde", "v4"] }
async-graphql = "1.16.5"
async-graphql-warp = "1.16.4"
